# django-simple-page

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yml  tests.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
example/: manage.py
example/example/: admin.py  models.py  settings.py  urls.py
example/example/migrations/: 0001_initial.py  0002_leftsidebar_mainregion.py  0003_mypage.py
simple_page/: __version__.py  admin.py  apps.py  assets.py  forms.py  models.py  renderer.py  signals.py  tests.py  urls.py  views.py
simple_page/migrations/: 0001_initial.py  0002_alter_page_options_alter_pagesection_options_and_more.py  0002_alter_pageregion_index_alter_pagesection_index_and_more.py  0002_pagesection_region.py  0003_alter_pagesection_order.py  0003_alter_pagesection_region.py  0004_alter_page_options_page_ordering_alter_page_order.py  0004_page_page_type.py  0005_alter_page_order_alter_page_ordering.py
simple_page/static/simple_page/: formset_handlers.js
simple_page/templates/admin/simple_page/page/: change_form.html
simple_page/templatetags/: simple_page.py
tests/: manage.py
tests/test_project/: admin.py  assets.py  models.py  renderer.py  settings.py  tests.py  urls.py
tests/test_project/fixtures/: testdata.json
tests/test_project/migrations/: 0001_initial.py
tests/test_project/templates/pages/: base_page.html  extra_page.html  main_page.html
tests/test_project/templates/sections/: extra_text_section.html  text_with_title_section.html
